crates/oxc_angular_compiler/tests/snapshots/partial_directive_test__minimal_directive_emits_required_fields_only.snap
---
source: crates/oxc_angular_compiler/tests/partial_directive_test.rs
expression: js
---
i0.ɵɵngDeclareDirective({minVersion:"14.0.0",version:"0.0.0-PLACEHOLDER",type:MyDir,
    selector:"[myDir]",ngImport:i0})
